--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,12 @@
-streamlit==1.35.0
+streamlit>=1.35.0
 torch>=1.9.0
 torchvision>=0.10.0
-opencv-python-headless
-pandas
-numpy
-Pillow
-PyYAML
-matplotlib
-seaborn
-tqdm
-requests
-scipy
-psutil
-thop
+opencv-python-headless>=4.5.5
+pandas>=1.3.0
+numpy>=1.19.2
+Pillow>=8.0.0
+PyYAML>=5.3.1
+tqdm>=4.64.0
+requests>=2.23.0
+scipy>=1.4.1
+psutil>=5.8.0
